--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,28 @@ image = "0.24"
 raw-window-handle = "0.5"
 ash = { version = "0.37.1+1.3.235", features = ["linked"] }
 ash-window = "0.12"
+
+[dependencies.bevy]
+version = "0.9"
+default-features = false
+features = [
+    "animation",
+    "bevy_asset",
+    "bevy_audio",
+    "bevy_gilrs",
+    "bevy_gltf",
+    "bevy_scene",
+    "bevy_winit",
+    # No render!
+    "png",
+    "hdr",
+    "vorbis",
+    "x11",
+    "filesystem_watcher",
+]
+
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release]
+lto = "thin"
