--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 
+bytemuck = { version = "1", features = ["derive"] }
 winit = "0.27"
 image = "0.24"
 raw-window-handle = "0.5"
