--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 
 bytemuck = { version = "1", features = ["derive"] }
+memoffset = "*"
 winit = "0.27"
 image = "0.24"
 raw-window-handle = "0.5"
