--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ memoffset = "*"
 winit = "0.27"
 image = "0.24"
 raw-window-handle = "0.5"
-ash = { version = "0.37.1+1.3.235", features = ["linked"] }
+ash = { version = "0.37.1", features = ["linked"] }
 ash-window = "0.12"
 
 [dependencies.bevy]
