--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [
+    "renderer",
+]
 
 [dependencies]
+
+renderer = { path = "renderer" }
 
 bytemuck = { version = "1", features = ["derive"] }
 memoffset = "*"
